sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:15: error: type mismatch;
 found   : Boolean
 required: Int
      while(getCouleur(l!=BLEU)&& l>=0){
                        ^